--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
         <img src="imagens/logo2.png" alt="logo da IBNA" class="cabecalho__logo">
         <nav class="menu">
             <ul class="menu__lista">
-                <li class="menu__item"><a href="home.html" class="menu__link ">Home</a></li>
+                <li class="menu__item"><a href="index.html" class="menu__link ">Home</a></li>
                 <li class="menu__item"><a href="nossa-historia.html" class="menu__link">Nossa Historia</a></li>
                 <li class="menu__item"><a href="o-que-cremos.html" class="menu__link">O que cremos</a></li>
                 <li class="menu__item ativo"><a href="contato.html" class="menu__link">Contato</a></li>
