--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="imagens/logo2.png" alt="logo da IBNA" class="cabecalho__logo">
         <nav class="menu">
             <ul class="menu__lista">
-                <li class="menu__item ativo"><a href="home.html" class="menu__link ">Home</a></li>
+                <li class="menu__item ativo"><a href="index.html" class="menu__link ">Home</a></li>
                 <li class="menu__item"><a href="nossa-historia.html" class="menu__link">Nossa História</a></li>
                 <li class="menu__item"><a href="o-que-cremos.html" class="menu__link">O que cremos</a></li>
                 <li class="menu__item"><a href="contato.html" class="menu__link">Contato</a></li>
