--- a/contato.html
+++ b/contato.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/cabecalho.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="CSS/contato.css">
-    <link rel="stylesheet" href="CSS/formulario.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/cabecalho.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/rodape.css">
+    <link rel="stylesheet" href="assets/CSS/contato.css">
+    <link rel="stylesheet" href="assets/CSS/formulario.css">
 
     <title>Igreja Batista Nova Aurora</title>
 </head>
