--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/cabecalho.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/atividade.css">
-    <link rel="stylesheet" href="css/pastores.css">
-    <link rel="stylesheet" href="css/endereco.css">
-    <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/cabecalho.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/atividade.css">
+    <link rel="stylesheet" href="assets/css/pastores.css">
+    <link rel="stylesheet" href="assets/css/endereco.css">
+    <link rel="stylesheet" href="assets/css/rodape.css">
 
     <title>Igreja Batista Nova Aurora</title>
 </head>
