corringindo dnv o css

--- a/contato.html
+++ b/contato.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/css/cabecalho.css">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/rodape.css">
-    <link rel="stylesheet" href="assets/CSS/contato.css">
-    <link rel="stylesheet" href="assets/CSS/formulario.css">
+    <link rel="stylesheet" href="assets/css/contato.css">
+    <link rel="stylesheet" href="assets/css/formulario.css">
 
     <title>Igreja Batista Nova Aurora</title>
 </head>
