--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/menu.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/atividade.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/pastores.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/endereco.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/rodape.css">
+    <link rel="stylesheet" type="text/css" href="CSS/reset.css">
+    <link rel="stylesheet" type="text/css" href="CSS/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="CSS/menu.css">
+    <link rel="stylesheet" type="text/css" href="CSS/home.css">
+    <link rel="stylesheet" type="text/css" href="CSS/atividade.css">
+    <link rel="stylesheet" type="text/css" href="CSS/pastores.css">
+    <link rel="stylesheet" type="text/css" href="CSS/endereco.css">
+    <link rel="stylesheet" type="text/css" href="CSS/rodape.css">
 
     <title>Igreja Batista Nova Aurora</title>
 </head>
