--- a/o-que-cremos.html
+++ b/o-que-cremos.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/cabecalho.css">
-    <link rel="stylesheet" href="CSS/menu.css">
-    <link rel="stylesheet" href="CSS/rodape.css">
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./index.css">
 
     <title>Igreja Batista Nova Aurora</title>
 </head>
 <body>
     <header class="cabecalho container">
-        <img src="imagens/logo2.png" alt="logo da IBNA" class="cabecalho__logo">
+        <img src="./src/assets/logo2.png" alt="logo da IBNA" class="cabecalho__logo">
         <nav class="menu">
             <ul class="menu__lista">
                 <li class="menu__item"><a href="index.html" class="menu__link ">Home</a></li>
@@ -27,7 +25,7 @@
 
     </main>
     <footer class="rodape">
-        <img src="imagens/logo-principal.png" alt="logo" class="rodape__imagem">
+        <img src="./src/assets/logo-principal.png" alt="logo" class="rodape__imagem">
         <h2 class="rodape__titulo">Igreja Batista Nova Aurora</h2>
         <p></p>
     </footer>
